<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutParent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundPrimary">

        <include
            android:id="@+id/componentToolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            layout="@layout/component_toolbar" />

        <ScrollView
            app:layout_constraintTop_toBottomOf="@id/componentToolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/AppTheme.Layout.Parent">

                <com.ismealdi.meepopup.util.component.AmTextView
                    app:am_font_style="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/colorTextAccent"
                    android:text="@string/text_isi_detail"/>

                <com.ismealdi.meepopup.util.component.AmEditText
                    android:background="@drawable/input_primary"
                    android:layout_marginTop="@dimen/component_big"
                    android:id="@+id/inputEmail"
                    style="@style/AppTheme.EditText.Primary"
                    android:lines="1"
                    android:hint="@string/text_email_address"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.ismealdi.meepopup.util.component.AmEditText
                    android:background="@drawable/input_primary"
                    android:layout_marginTop="@dimen/component_medium"
                    android:id="@+id/inputName"
                    style="@style/AppTheme.EditText.Primary"
                    android:lines="1"
                    android:hint="@string/text_nama_lengkap"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.ismealdi.meepopup.util.component.AmEditText
                    android:background="@drawable/input_primary"
                    android:layout_marginTop="@dimen/component_medium"
                    android:id="@+id/inputPassword"
                    style="@style/AppTheme.EditText.Primary"
                    android:lines="1"
                    android:hint="@string/text_kata_sandi"
                    android:inputType="textVisiblePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/component_medium">

                    <com.ismealdi.meepopup.util.component.AmTextView
                        android:id="@+id/labelCountryCode"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:am_font_style="medium"
                        android:layout_width="wrap_content"
                        android:paddingStart="@dimen/component_medium"
                        android:paddingEnd="@dimen/component_medium"
                        android:layout_height="0dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_small"
                        android:textColor="@color/colorTextLight"
                        android:text="@string/text_country_code"/>

                    <com.ismealdi.meepopup.util.component.AmEditText
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/labelCountryCode"
                        android:background="@drawable/input_primary"
                        android:id="@+id/inputPhone"
                        style="@style/AppTheme.EditText.Primary"
                        android:lines="1"
                        android:hint="@string/text_phone_hint"
                        android:inputType="phone"
                        android:digits="1234567890"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.ismealdi.meepopup.util.component.AmTextView
                    android:layout_marginTop="@dimen/component_small"
                    app:am_font_style="regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_tiny"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/text_phone_number_terms"/>

                <com.ismealdi.meepopup.util.component.AmCheckBox
                    android:id="@+id/checkAgreement"
                    android:layout_marginStart="-6dp"
                    android:layout_marginTop="@dimen/component_big"
                    android:layout_marginBottom="@dimen/component_super"
                    android:textSize="@dimen/text_small"
                    android:text="@string/text_dengan_membuat_akun_saya_menerima_syarat_dan_ketentuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <com.ismealdi.meepopup.util.component.AmButton
                    app:am_font_style="bold"
                    android:id="@+id/buttonSignUp"
                    style="@style/AppTheme.Button"
                    android:textSize="@dimen/text_small"
                    android:paddingStart="@dimen/component_extra_big"
                    android:paddingEnd="@dimen/component_extra_big"
                    android:background="@drawable/button_primary_round"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height_big"
                    android:text="@string/text_gabung"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
